ipsvd 0.4.1
Sun, 11 May 2003 13:12:12 +0200
  * ipsvd_fmt.c: minor cleanup.
  * tcpsvd.c: include sys/types.h (really; thx clemens fischer); minor
    cleanup.

ipsvd 0.4.0
Mon, 05 May 2003 13:15:45 +0200
  * ipsvd_check.c, ipsvd_check.h, tcpsvd.c: optionally send alert message
    to client when denying connection due to per host concurrency limit.
  * man/ipsvd-instruct.5, man/tcpsvd.8: adapt.
  * ipsvd_fmt.c, ipsvd_fmt.h: ipsvd_fmt_msg(): convert backslash-escaped
    characters in message.
  * package/upgrade: typo.
  * doc/examples.html: new.
  * doc/index.html: adapt.

ipsvd 0.3.4
Tue, 29 Apr 2003 14:56:43 +0200
  * ipsvd_check.c, ipsvd_check.h: support -t option: timeout for last
    access of files in an instructions directory; code cleanup.
  * tcpsvd.c, udpsvd.c: support -t option.
  * man/ipsvd.7, man/tcpsvd.8, man/udpsvd.8: adapt.
  * doc/install.html: build static djbdns client library only.
  * doc/usedietlibc.html: add instructions on how to build the djbdns client
    library with the diet libc.

ipsvd 0.3.0
Sat, 12 Apr 2003 16:40:02 +0200
  * doc/install.html: typo.
  * ipsvd-cdb.c: adapt; typo.
  * ipsvd_check.c, ipsvd_check.h: support hostname based instructions and
    catchall file 0; support removing environment vars.
  * ipsvd_hostname.c, ipsvd_hostname.h: new; lookup hostname in dns.
  * tcpsvd.c, udpsvd.c: remove -n option; support hostname based
    instructions; log localip:localhost info; add -l option; add -p option;
    replace -H with -h, by default do not look up hostname; add -vv option;
    slightly change log messages.
  * ipsvd_phcc.c, ipsvd_phcc.h: new; connection tracking, per host
    concurrency.
  * tcpsvd.c: add -C option, support per host concurrency limit; include
    <sys/types.h> (BSD OS needs it, thx clemens fischer).
  * man/ipsvd-instruct.5: document hostname based instructions, concurrency
    instructions, catchall file 0, removing environment vars.
  * man/tcpsvd.8, man/udpsvd.8: adapt.