@@ -96,13 +96,19 @@ This option must be set if
 .B tcpsvd
 listens on port 53 to avoid loops.
 .TP
-.B \-u \fIuser
+.B \-u \fIuser\fR[:\fIgroup\fR]
 drop permissions.
 Switch user ID to
 .IR user 's
 UID, and group ID to
 .IR user 's
 primary GID after creating and binding to the socket.
+If
+.I user
+is followed by a colon and a group name, the group ID is switched to
+the GID of
+.I group
+instead.
 .TP
 .B \-c \fIn
 concurrency.
