@@ -3,6 +3,7 @@
 #include <netinet/in.h>
 #include <unistd.h>
 #include <pwd.h>
+#include <grp.h>
 #include <dns.h>
 #include <socket.h>
 #include <ip4.h>
@@ -152,6 +153,7 @@ void connection_accept(int c) {
 
 int main(int argc, const char **argv, const char *const *envp) {
   int opt;
+  char *user =0;
   char *host;
   unsigned long port;
   stralloc sa ={0};
@@ -163,6 +165,7 @@ int main(int argc, const char **argv, const char *const *envp) {
   struct taia now;
   struct taia deadline;
   struct passwd *pwd =0;
+  struct group *gr;
 
   progname =*argv;
 
@@ -172,8 +175,7 @@ int main(int argc, const char **argv, const char *const *envp) {
       ++verbose;
       break;
     case 'u':
-      if (! (pwd =getpwnam(optarg)))
-	strerr_die3x(100, FATAL, "unknown user: ", (char*)optarg);
+      user =(char*)optarg;
       break;
     case 'l':
       if (! stralloc_copys(&local_hostname, optarg)) die_nomem();
@@ -212,6 +214,24 @@ int main(int argc, const char **argv, const char *const *envp) {
   local_port =(char*)*argv++;
   if (! argv || ! *argv) usage();
   prog =argv;
+
+  if (user) {
+    char *group =0;
+    int delim;
+
+    if (user[(delim =str_chr(user, ':'))] == ':') {
+      user[delim] =0;
+      group =user +delim +1;
+    }
+    if (! (pwd =getpwnam(user)))
+      strerr_die3x(100, FATAL, "unknown user: ", user);
+    if (group) {
+      if (! (gr =getgrnam(group)))
+	strerr_die3x(100, FATAL, "unknown group: ", group);
+      pwd->pw_gid =gr->gr_gid;
+      user[delim] =':';
+    }
+  }
 
   dns_random_init(seed);
   sig_catch(sig_term, sig_term_handler);
