@@ -2,7 +2,7 @@ ipsvd (0.4.1-1) unstable; urgency=low
 
   * new upstream version.
 
- -- Gerrit Pape <pape@smarden.org>  Sun, 11 May 2003 13:15:00 +0200
+ -- Gerrit Pape <pape@smarden.org>  Mon, 12 May 2003 10:18:14 +0200
 
 ipsvd (0.4.0-1) unstable; urgency=low
 
